@@ -16,6 +16,7 @@ import org.octri.notification.registry.NotificationStatusRegistry;
 import org.octri.notification.registry.NotificationTypeRegistry;
 import org.octri.notification.repository.NotificationRepository;
 import org.octri.notification.view.NotificationStatusSelectOption;
+import org.octri.notification.view.NotificationViewer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -66,28 +67,28 @@ public class NotificationController extends AbstractEntityController<Notificatio
 		var template = super.list(model);
 		@SuppressWarnings("unchecked")
 		Iterable<Notification> notifications = (Iterable<Notification>) model.get("entity_list");
-		var viewerMap = notificationTypeRegistry.getRegisteredTypes().stream()
+		Map<String, NotificationViewer> viewerByType = notificationTypeRegistry.getRegisteredTypes().stream()
 				.collect(Collectors.toMap(
 						t -> t,
 						t -> notificationTypeRegistry.getHandler(t).getViewer()));
 		// Prepare viewers
-		for (var type : viewerMap.keySet()) {
-			var viewer = viewerMap.get(type);
+		for (var type : viewerByType.keySet()) {
+			var viewer = viewerByType.get(type);
 			var typeNotifications = StreamSupport.stream(notifications.spliterator(), false)
 					.filter(n -> n.getNotificationType().equals(type))
-					.collect(Collectors.toList());
+					.toList();
 			viewer.prepare(typeNotifications);
 		}
 		List<Notification> notificationViews = StreamSupport
 				.stream(notifications.spliterator(), false)
 				.map(n -> {
-					var viewer = viewerMap.get(n.getNotificationType());
+					var viewer = viewerByType.get(n.getNotificationType());
 					if (viewer != null) {
 						n.setNotificationRecipientView(viewer.getRecipientView(n));
 						n.setNotificationMetadataView(viewer.getMetadataView(n));
 					}
 					return n;
-				}).collect(Collectors.toList());
+				}).toList();
 		model.put("entity_list", notificationViews);
 		model.put("notificationStatuses", notificationStatusRegistry.getStatuses());
 		ViewUtils.addPageScript(model, "table-filtering.js");
